Add resources - raw file

--- a/resources/PeerIQ.Python.Data.Analyst.Challenge.ipynb
+++ b/resources/PeerIQ.Python.Data.Analyst.Challenge.ipynb
@@ -13,12 +13,12 @@
     "For this project we will be exploring sample datasets from [LendingClub.com](www.lendingclub.com). Lending Club connects people who need money (borrowers) with people who have money (investors). \n",
     "\n",
     "Download below data sets to your local machine:\n",
-    "* lc_data_tape.csv : \n",
+    "* [lc_data_tape.csv](https://peeriq-interview.s3.amazonaws.com/lc_data_tape.csv) : \n",
     "    * It includes information about the borrower for each loan (emp_title, income, addr_state, income), loan characteristics (interest rate, term), and  loan status (is the loan delinquent, making payments on time (current), fully paid or charged-off) issued between 2007-2018.\n",
     "    * Each row in the loan tape represents a loan (identified by column `id`) that was originated by LendingClub (often referred to as LC) - https://en.wikipedia.org/wiki/LendingClub\n",
     "\n",
     "\n",
-    "* lc_payment_file.csv :\n",
+    "* [lc_payment_file.csv](https://peeriq-interview.s3.amazonaws.com/lc_payment_file.csv) :\n",
     "    * It includes information about all payments (ie. interest and principal payments, loan grade, etc) made for loans issued between  2007-2017.\n"
    ]
   },
@@ -335,6 +335,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.3"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
